--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,21 @@
 /*  your css code here. If applicable */
+ #main-container{
+	 padding:auto;
+	 background-color:#f5f5f5;
+ }
+
+.testimonial{
+	padding:20px;
+	border-style:solid;
+	border-width:1px;
+}
+.second{
+	padding:auto;
+	border-style:solid;
+	border-width:1px;
+}
+
+span{
+	text-align:right;
+	font-style:italic;
+}
