--- a/styles.css
+++ b/styles.css
@@ -8,14 +8,17 @@
 	padding:20px;
 	border-style:solid;
 	border-width:1px;
+	background-color:white;
 }
 .second{
 	padding:auto;
 	border-style:solid;
 	border-width:1px;
+	margin:10px
+	
 }
 
-span{
-	text-align:right;
+ .author{
+	text-align:center;
 	font-style:italic;
 }
